<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/bg_main_color">

    <com.inthecheesefactory.thecheeselibrary.widget.AdjustableImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/bg_header"/>


    <TextView
        android:id="@+id/text_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="#007881"
        android:textSize="25sp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"/>
    <com.inthecheesefactory.thecheeselibrary.widget.AdjustableImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/bg_footer"
        android:layout_alignParentBottom="true"/>
    <ImageView
        android:id="@+id/objRegister"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/tele_kidney"
        android:layout_alignParentBottom="true"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/birthday_text_input"
            style="@style/TextInputLayoutAppearance.register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_below="@+id/text_register"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="25dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/birthday_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/birthday" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/view_birthdate"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@+id/text_register"
        android:layout_marginTop="25dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="50dp"
        />

    <LinearLayout
        android:id="@+id/view_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/birthday_text_input"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="40dp">
            <ImageView
                    android:id="@+id/maleSelectorBt"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/male_gender_sign"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                 
                android:layout_marginTop="10dp"
                android:layout_gravity="center"/>

        </LinearLayout>


        <View
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/dimGray"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/dimGray"
             
            android:layout_gravity="center"
            android:layout_margin="10dp"/>
        <View
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/dimGray"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="40dp">
            <ImageView
                    android:id="@+id/femaleSelectorBt"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/female_sign_2"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                 
                android:layout_marginTop="10dp"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/hospital_text_input"
            style="@style/TextInputLayoutAppearance.register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_below="@+id/view_gender"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="25dp"
            >

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/hospital_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/hospital" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hospital_text_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/gradient_green"
        android:paddingStart="20dp"
        android:paddingTop="8dp"
        android:paddingEnd="20dp"
        android:paddingBottom="8dp"
        android:text="@string/register"
        android:textColor="#2D2F31"
        android:textSize="20sp"
        android:elevation="5dp"/>

    <RelativeLayout
        android:id="@+id/registerProgressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lavender"
        android:visibility="invisible"
        android:alpha="0.8">
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="100dp"/>
    </RelativeLayout>


</RelativeLayout>