<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RiskFormActivity">

    <TextView
        android:id="@+id/risk_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kidney_disease"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:textSize="20sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/risk_header"
        android:layout_margin="20dp"
        android:scrollbars="none"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/checkbox_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>
        <LinearLayout
            android:id="@+id/nurseWarning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="แค่มีข้อเดียว\nก็เสี่ยงที่จะเป็นโรคไตแล้วค่ะ"
                android:gravity="center"
                android:background="@drawable/riskwarning_bt_bg"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:textColor="@android:color/black"
                />
            <com.inthecheesefactory.thecheeselibrary.widget.AdjustableImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/bs_add_form"/>
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/complain_2"
                    android:layout_marginEnd="10dp"
                    android:elevation="1dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/risk_form_warning"/>

            </LinearLayout>

            <TextView
                android:id="@+id/done_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:text="@string/done"
                android:textColor="#1D3826"
                android:background="@drawable/riskform_bt_bg"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:elevation="5dp"
                android:fontFamily="@font/raingan"
                android:textSize="30sp"

                />
        </LinearLayout>



    </ScrollView>



</RelativeLayout>